# OctoPrint-BME680ChamberTemp

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
octoprint_bme680_chambertemp/: __init__.py  bme680_chambertemp.py  core.py
octoprint_bme680_chambertemp/static/css/: bme680_chambertemp.css
octoprint_bme680_chambertemp/static/js/: bme680_chambertemp.js
octoprint_bme680_chambertemp/templates/: bme680_chambertemp_settings.jinja2  bme680_chambertemp_tab.jinja2
tests/: conftest.py  test_core.py  test_plugin.py
